--- a/HISTORIAL/historial.html
+++ b/HISTORIAL/historial.html
@@ -75,7 +75,7 @@
             const selectedCardIndex = localStorage.getItem('selectedCard');
             const cardInfo = {
                 0: 'Ash Ketchum',
-                1: 'Misty Waterflower',
+                1: 'Lisandro Berdugo',
                 2: 'Brock Harrison',
                 3: 'Gary Oak',
                 4: 'Team Rocket'
