--- a/SERVICIOS/servicios.html
+++ b/SERVICIOS/servicios.html
@@ -48,7 +48,7 @@
             // Definir los nombres de usuario según el índice
             const usuarios = {
                 0: 'Ash Ketchum',
-                1: 'Misty Waterflower',
+                1: 'Lisandro Berdugo',
                 2: 'Brock Harrison',
                 3: 'Gary Oak',
                 4: 'Team Rocket'
