--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button id="next" class="btn btn-dark">Siguiente</button>
             </div>
             <div class="control-borrar">
-                <button id="borrar" class="btn btn-danger">Restablecer demo</button>
+                <button id="borrar" class="btn btn-danger">Restablecer LocalStorage</button>
             </div>
         </div>
     </div>
