--- a/DEPOSITO/deposito.html
+++ b/DEPOSITO/deposito.html
@@ -66,7 +66,7 @@
         function mostrarNombreUsuario() {
             const cardInfo = {
                 0: 'Ash Ketchum',
-                1: 'Misty Waterflower',
+                1: 'Lisandro Berdugo',
                 2: 'Brock Harrison',
                 3: 'Gary Oak',
                 4: 'Team Rocket'
@@ -132,9 +132,9 @@
                 icon: 'success',
                 title: '¡Depósito Exitoso!',
                 text: `Se ha depositado $${cantidad.toFixed(2)} a su cuenta.`,
-                confirmButtonText: 'Sí, generar ticket',
+                confirmButtonText: 'Generar ticket',
                 showCancelButton: true,
-                cancelButtonText: 'No, regresar'
+                cancelButtonText: 'Salir'
             }).then((result) => {
                 if (result.isConfirmed) {
                     generarTicketPDF(cantidad, saldoAnterior, nuevoSaldo); // Genera el ticket con los detalles
